# trailcam-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: example.csv
src/trailcam_pipeline/: cli.py  export.py  ingest.py  main.py  models.py  pipeline.py  plot.py  projection.py  summarize.py  transform.py  utils.py  validate.py
src/trailcam_pipeline/analysis/: abundance.py  activity.py  count.py
tests/: factories.py  test_pipeline.py
tests/data/: test.csv
tests/integration/: test_pipeline.py
tests/unit/: test_analysis.py  test_transform.py  test_validate.py
