[project]
name = "trailcam-pipeline"
version = "0.1.0"
description = "A command-line tool for producing summary reports from camera trap detections"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]